validation, home pciture, 404 picture, 500 picture and javscript typing

--- a/public/404.html
+++ b/public/404.html
@@ -23,7 +23,7 @@
   <!-- This file lives in public/404.html -->
   <div class="container error-container">
     <div class="row">
-    <div class="col-md-12">4 <img src="../app/assets/images/pizza.png" alt=""> 4</div>
+    <div class="col-md-12">4 <img src="https://res.cloudinary.com/astridbosch/image/upload/v1543526842/wasted/pizzalogo.png" alt="Pizza">   4</div>
   </div>
 
   <div class="row">
