--- a/public/500.html
+++ b/public/500.html
@@ -22,7 +22,7 @@
   <!-- This file lives in public/404.html -->
   <div class="container error-container">
     <div class="row">
-      <div class="col-md-12">5 <img src="../app/assets/images/pizza.png" alt=""><img src="../app/assets/images/pizza.png" alt=""> </div>
+      <div class="col-md-12">5 <img src="https://res.cloudinary.com/astridbosch/image/upload/v1543526842/wasted/pizzalogo.png" alt="Pizza"><img src="https://res.cloudinary.com/astridbosch/image/upload/v1543526842/wasted/pizzalogo.png" alt="Pizza"> </div>
     </div>
 
     <div class="row">
